--- a/.env
+++ b/.env
@@ -29,5 +29,6 @@ APP_SECRET=19be4aa3df119cdf563f34ef11a8fdc9
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+# Only for DEV: IMPORTANT You must change parameter homeaway user & password
+DATABASE_URL=mysql://homeawayuser:homeawaypassword@127.0.0.1:3306/homeaway?serverVersion=8.0
 ###< doctrine/doctrine-bundle ###
