--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,7 +1,12 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
-# the "app_homer" route name is not important yet
-app_home:
-    path: /home
-    controller: App\Controller\HomeController::home
+# the "app_home" route name is not important yet
+
+app_index:
+    path: /
+    controller: App\Controller\HomeController::index
+
+# app_base:
+#     path: /base
+#     controller: App\Controller\HomeController::base
