--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,11 +1,13 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
-# the "app_home" route name is not important yet
 
-app_base:
-    path: /base
-    controller: App\Controller\HomeController::base
-app_index:
+myagency:
     path: /
+    controller: App\Controller\HomeController::base
+home:
+    path: /home/
     controller: App\Controller\HomeController::index
+property:
+    path: /property/
+    controller: App\Controller\PropertyController::index
